[package]
name = "Lingine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
anvil-region = "0.8"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
gdal = { version = "0.19" }
geo = "0.32"
indicatif = { version = "0.18", features = ["rayon"] }
named-binary-tag = "0.6.0"
noise = "0.9"
rayon = "1.11"
regex = "1.12"
tap = "1.0"
tokio = { version = "1.49", features = ["full"] }
walkdir = "2.5"