[package]
name = "Lingine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fastanvil = { version =  "0.32", default-features = false }
flate2 = "1.1"
futures = "0.3"
gdal = { version = "0.19" }
geo = "0.32"
indicatif = { version = "0.18", features = ["rayon"] }
lz4-java-wrc = "0.2"
na_nbt = "0.2"
noise = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0"
tokio = { version = "1.49", features = ["full"] }
walkdir = "2.5"